Se cambia el movimiento de los virus para ser mucho menos caótico, aunque sigue
(y seguirá) siendo aleatorio. También se cambia cómo responden cuando chocan con
otro virus; simplemente cambian de dirección.


Cambios presentados el 2021/01/28
---------------------------------
Se empieza a utilizar StretchViewport en vez de ExtendViewport para corregir
un bug en el que se mostraban regiones fuera de límites en algunos dispositivos.

También se elimina el número máximo de virus que pueden existir en un mapa.

Se introducen los siguientes cambios, sujetos a volver a cambiar en el futuro:
- No existe actualmente un zoom máximo.
- El nivel de demostración es más complejo.


Cambios presentados el 2021/01/28 (2)
-------------------------------------
Se añaden las mascarillas como actor.


Cambios presentados el 2021/01/29
---------------------------------
Se introducen las clases ActorGenerator y GenerableActor, que ayudan a especificar
de forma concisa y sin repetición de código la generación periódica de actores.
Consecuentemente, desaparecen las clases VirusPool y MaskPool (además de que en
el futuro no tendremos que crear todavía más fondos en el package pooling solo para
este propósito), desaparecen los atributos correspondientes en la clase LaPandemia,
etc.

También se corrige como consecuencia natural un error de pérdida de memoria (memory
leak) en GameScreen#dispose, donde solo se liberaban los VirusActor pero no los
MaskActor. Tan solo es un ejemplo más de por qué haber reducido la duplicación de
código es importante.


Cambios presentados el 2021/01/29
---------------------------------
Tras observar más detenidamente el ciclo de vida de los fondos, se ha eliminado por
completo el package "pooling" a favor de crear fondos anónimos desde la clase principal
del juego. Además, la función init() se ha eliminado de donde era innecesaria, ya que
complicaba las cosas más de lo que ayudaba debido a las limitaciones del sistema
tipado de Java.